# async-logging

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml  run.sh
.github/workflows/: build.yml
async_logging/: __init__.py
async_logging/config/: __init__.py  log_level_map.py  logging_config.py
async_logging/models/: __init__.py  entry.py  node_type.py
async_logging/queue/: __init__.py  log_consumer.py  log_provider.py
async_logging/rotation/: __init__.py
async_logging/streams/: logger.py  logger_context.py  logger_stream.py  retention_policy.py
examples/: basic_example.py  record_test.py
examples/logs/: logs.json  logs_archived_1720032073.993121.zst  logs_archived_1720032082.428982.zst  logs_archived_1720032095.042557.zst  logs_archived_1720032102.215098.zst  logs_archived_1720032184.426698.zst
